--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
         "symfony/http-client": "6.2.*",
+        "symfony/http-foundation": "6.2.*",
         "symfony/intl": "6.2.*",
         "symfony/mailer": "6.2.*",
         "symfony/mime": "6.2.*",
@@ -39,6 +40,7 @@
         "symfony/twig-bundle": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
